--- a/build.gradle
+++ b/build.gradle
@@ -51,5 +51,5 @@ dependencies {
     testCompile libs.junit5
     testCompile 'org.assertj:assertj-core:3.10.0'
     testCompile 'org.hamcrest:hamcrest-core:2.1'
-    testCompile "org.mockito:mockito-all:2.+"
+    testCompile "org.mockito:mockito-core:2.+"
 }
