--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 def JUNIT5_API_VERSION = '5.3.0'
@@ -50,4 +51,5 @@ dependencies {
     testCompile libs.junit5
     testCompile 'org.assertj:assertj-core:3.10.0'
     testCompile 'org.hamcrest:hamcrest-core:2.1'
+    testCompile "org.mockito:mockito-core:2.+"
 }
